Update dependabot.yml to include GitHub Actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,7 @@
+# .github/dependabot.yml
 version: 2
 updates:
-  - package-ecosystem: "" 
-    directory: "/" 
+  - package-ecosystem: "github-actions"
+    directory: "/"
     schedule:
       interval: "weekly"
